--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <div class="w-12 h-12 bg-cifra-orange rounded-full flex items-center justify-center text-white font-bold text-xl mr-3">C</div>
-                <h1 class="text-xl font-bold text-cifra-black hidden sm:block">Cifra Correspondente Autorizado</h1>
+                <h1 class="text-xl font-bold text-cifra-black hidden sm:block">Cifra Soluçoes</h1>
             </div>
             <a href="#form-section" class="bg-cifra-orange hover:bg-orange-600 text-white font-bold py-2 px-6 rounded-full transition duration-300">
                 Começar Agora
