--- a/index.html
+++ b/index.html
@@ -308,6 +308,15 @@
             </div>
         </div>
     </footer>
+    
+    <script type="text/javascript">
+  (function(){
+      emailjs.init({
+        // Sua chave real deve ficar aqui dentro das aspas
+        publicKey: "o1OnIRa-52uOXw_Pp", 
+      });
+   })();
+</script>
 
 <script>
 document.addEventListener('DOMContentLoaded', function () {
