--- a/obrigado.html
+++ b/obrigado.html
@@ -139,8 +139,7 @@
         (function() {
             let seconds = 7; // Tempo em segundos para o redirecionamento
             const countdownElement = document.getElementById('countdown');
-            const homeUrl = '/'; // URL da página inicial do seu site
-
+            const homeUrl = '/'; // https://cifra10.github.io/CifraSolucoes/
             const interval = setInterval(() => {
                 seconds--;
                 countdownElement.textContent = seconds;
