--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 kwaiq.load('286343624982321');
 kwaiq.page();
 kwaiq.track('completeRegistration')
-
+</script>
+   
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
