--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script>
 kwaiq.load('286600319955326');
 kwaiq.page();
+kwaiq.track('contentView')
 </script>
     <!-- Pixel Kwai Ads - FIM --> 
     
