--- a/obrigado.html
+++ b/obrigado.html
@@ -14,7 +14,7 @@
 <script>
 kwaiq.load('286600319955326');
 kwaiq.page();
-kwaiq.track('formSubmit')
+kwaiq.track('completeRegistration')
 </script>
     <!-- Pixel Kwai Ads - FIM --> 
     <style>
