--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     kwaiq.page();
     kwaiq.track('contentView')
     </script>
+  
+    <style>
+.extension-menu {
+display: none !important; }
+img {
+pointer-events: none;
+
+ }
+
+   </style>
+
+
     <script>
         tailwind.config = {
             theme: {
