--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 if (data.status === 'success') {
                     // E-mail só é enviado APÓS o backend validar tudo
                     submitButton.innerHTML = '<i class="fas fa-paper-plane fa-spin mr-2"></i> Finalizando...';
-                    emailjs.sendForm('service_ei51uod', 'template_315xj8p', form)
+                    emailjs.sendForm('service_e8izs2e', 'template_315xj8p', form)
                         .then(() => {
                             Swal.fire({
                                 title: 'Sucesso!',
