--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <script>
         // Initialize EmailJS
         (function(){
-            emailjs.init("fvqqcQKUU1OH--dzS");
+            emailjs.init("VOLVwszoqRQLD_4Pj");
         })();
     
         // ----- VARIÁVEIS DE CONTROLE E CONFIGURAÇÃO -----
@@ -360,7 +360,7 @@
                 if (data.status === 'success') {
                     // E-mail só é enviado APÓS o backend validar tudo
                     submitButton.innerHTML = '<i class="fas fa-paper-plane fa-spin mr-2"></i> Finalizando...';
-                    emailjs.sendForm('service_e8izs2e', 'template_315xj8p', form)
+                    emailjs.sendForm('service_4rkj39a', 'template_zhvmpsv', form)
                         .then(() => {
                             Swal.fire({
                                 title: 'Sucesso!',
