--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
     kwaiq.load('288131444951323');
     kwaiq.page();
-    kwaiq.track('contentView')
+    kwaiq.track('completeRegistration')
     </script>
     <script>
         tailwind.config = {
